--- a/ansible/templates/drone_launch.yaml.j2
+++ b/ansible/templates/drone_launch.yaml.j2
@@ -7,7 +7,7 @@ launch:
         - name: "fcu_url"
           value: "{{ drone_fcu_url }}"
         - name: "namespace"
-          value: "{{ ns }}"
+          value: "{{ ns }}/mavros"
     - include: 
         file: "$(find-pkg-share mocap_to_vision_pose_ros2)/launch/mocap_to_vision_pose.launch.py"
         arg:
