--- a/ansible/templates/drone_launch.yaml.j2
+++ b/ansible/templates/drone_launch.yaml.j2
@@ -10,6 +10,7 @@ launch:
           value: "{{ ns }}/mavros"
     - include: 
         file: "$(find-pkg-share mocap_to_vision_pose_ros2)/launch/mocap_to_vision_pose.launch.py"
+        namespace: "{{ ns }}"
         arg:
           - name: "mocap_topic"
             value: "/optitrack_multiplexer_node/rigid_body/{{ ansible_hostname }}"
