--- a/ansible/templates/drone_launch.yaml.j2
+++ b/ansible/templates/drone_launch.yaml.j2
@@ -33,7 +33,7 @@ launch:
         exec: "drone_planner_node"
         namespace: "{{ ns }}"
     - node:
-        pkg: "omninxt_controller_ros2"
-        exec: "omninxt_controller_node"
+        pkg: "swarmnxt_controller_ros2"
+        exec: "swarmnxt_controller_node"
         namespace: "{{ ns }}"
         
