update latency checker

--- a/ansible/templates/drone_launch.yaml.j2
+++ b/ansible/templates/drone_launch.yaml.j2
@@ -14,7 +14,7 @@ launch:
       
     - node:
         pkg: "latency_checker_ros2"
-        exec: "latency_checker"
+        exec: "latency_checker_node"
         namespace: "{{ ns }}" # populated by calling playbook.
         param:
         -
