--- a/ansible/templates/host_launch.py.j2
+++ b/ansible/templates/host_launch.py.j2
@@ -35,7 +35,7 @@ def generate_launch_description():
 
     latency_checker_node = Node(
         package="latency_checker_ros2",
-        executable="latency_checker",
+        executable="latency_checker_node",
         namespace='{{ ansible_hostname | map("regex_replace", "-", "_") | join("") }}',
         name="latency_checker",
         output="screen",
