--- a/ansible/templates/drone_bridge_config.yaml.j2
+++ b/ansible/templates/drone_bridge_config.yaml.j2
@@ -4,4 +4,5 @@ to_domain: 0
 topics: 
   {{ns}}/mavros/state: 
     type: mavros_msgs/msg/State
-    
+  {{ns}}/mavros/local_position/pose: 
+    type: geometry_msgs/msg/PoseStamped
