fix mocap pkg name

--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -73,7 +73,7 @@ def generate_launch_description():
         cmd=[
             "ros2",
             "run",
-            "mocap_to_vision_pose",
+            "mocap_to_vision_pose_ros2",
             "check_and_launch.py",
             "--namespace",  
             "{{ ns }}",
