fix peer list path

--- a/ansible/templates/host_launch.py.j2
+++ b/ansible/templates/host_launch.py.j2
@@ -57,7 +57,7 @@ def generate_launch_description():
         output="screen",
         parameters=[
             {"port": 8080},
-            {"peers_file": "{{ host_ros_path }}/config/peers.yaml"}
+            {"peers_file": "{{ host_ros_path }}/config/peer_list.yaml"}
         ]
     )
 
