--- a/ansible/templates/ros_packages_service.j2
+++ b/ansible/templates/ros_packages_service.j2
@@ -5,10 +5,10 @@ After=multi-user.target
 [Service]
 Type=simple
 ExecStart=/bin/bash {{ base_path }}/ros_packages_start.sh
-# Ensure proper signal handling for clean shutdown
 KillMode=control-group
 KillSignal=SIGTERM
-
+ExecStop=/bin/bash -c "pkill -f ros2cli.daemon.daemonize"
+TimeoutStopSec=5
 
 [Install]
 WantedBy=multi-user.target
