--- a/ansible/templates/drone_bridge_config.yaml.j2
+++ b/ansible/templates/drone_bridge_config.yaml.j2
@@ -10,3 +10,5 @@ topics:
     type: swarmnxt_msgs/msg/DroneState
   {{ns}}/planner/trajectory:
     type: nav_msgs/msg/Path
+  {{ns}}/mavros/setpoint_position/local:
+    type: geometry_msgs/msg/PoseStamped
