--- a/ansible/templates/drone_bridge_config.yaml.j2
+++ b/ansible/templates/drone_bridge_config.yaml.j2
@@ -8,5 +8,5 @@ topics:
     type: geometry_msgs/msg/PoseStamped
   {{ns}}/manager/state:
     type: swarmnxt_msgs/msg/DroneState
-  {{ns}}/planner/trajectory:
+  {{ns}}/trajectory:
     type: nav_msgs/msg/Path
