send controller enable msgs

--- a/ansible/templates/host_bridge_config.yaml.j2
+++ b/ansible/templates/host_bridge_config.yaml.j2
@@ -19,4 +19,7 @@ topics:
   /nxt{{ num }}/goals:
     type: nav_msgs/msg/Goals
     to_domain: {{ num }}
+  /nxt{{ num }}/controller/enable:
+    type: swarmnxt_msgs/msg/Trigger
+    to_domain: {{ num }}
 {% endfor %}
