--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -17,6 +17,7 @@ import os
 
 
 def generate_launch_description():
+    hdsm_idx = {{ groups['drones'].index(inventory_hostname) - 1 }}
 
     bridge_node = Node(
         package="domain_bridge",
@@ -132,6 +133,11 @@ def generate_launch_description():
         package="swarmnxt_controller_ros2",
         executable="swarmnxt_controller_node",
         namespace="{{ ns }}",
+        parameters=[
+            {
+                "hdsm_agent_prefix": "/agent_" + str(hdsm_idx),
+            }
+        ],
         output="log",
     )
 
@@ -165,7 +171,7 @@ def generate_launch_description():
             )
         ),
         launch_arguments={
-            "rob_id": "{{ (drone_num | int) - 1 }}",
+            "rob_id": str(hdsm_idx),
             "n_rob": "{{ groups['drones'] | length }}",
         }.items(),
     )
