--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -171,7 +171,7 @@ def generate_launch_description():
             )
         ),
         launch_arguments={
-            "rob_id": str(hdsm_idx),
+            "id": str(hdsm_idx),
             "n_rob": "{{ groups['drones'] | length }}",
         }.items(),
     )
