update to yaml, add agent name to gui

--- a/ansible/templates/host_launch.py.j2
+++ b/ansible/templates/host_launch.py.j2
@@ -58,7 +58,7 @@ def generate_launch_description():
         parameters=[
             {"port": 8080},
             {"peers_file": "{{ host_ros_path }}/config/peer_list.yaml"},
-            {"hdsm_mapping_file": "{{ host_ros_path }}/config/hdsm_planner_map.json"}
+            {"hdsm_mapping_file": "{{ host_ros_path }}/config/hdsm_planner_map.yaml"}
         ]
     )
 
