--- a/ansible/templates/host_launch.py.j2
+++ b/ansible/templates/host_launch.py.j2
@@ -63,12 +63,12 @@ def generate_launch_description():
     )
 
     goal_giver_node = Node(
-        package="goal_giver_ros2"
-        executable="goal_giver.py"
-        name="goal_giver_node"
-        output="screen"
+        package="goal_giver_ros2",
+        executable="goal_giver.py",
+        name="goal_giver_node",
+        output="screen",
         parameters=[
-            "agent_name": "agent_1"
+            {"agent_name": "agent_1"}
         ]
     )
 
