--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -53,7 +53,7 @@ def generate_launch_description():
 
     mocap_to_vision_pose = Node(
         package="mocap_to_vision_pose_ros2",
-        executable="mocap_to_vision_pose",
+        executable="mocap_to_vision_pose_node",
         namespace="{{ ns }}",
         parameters=[
             {
