--- a/ansible/templates/micro_xrce_service.j2
+++ b/ansible/templates/micro_xrce_service.j2
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=simple
-ExecStart=MicroXRCEAgent serial --dev /dev/ttyTHS1 -b 921600
+ExecStart=MicroXRCEAgent serial --dev /dev/ttyTHS1 -b 3000000
 
 [Install]
 WantedBy=multi-user.target
