--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -155,6 +155,6 @@ def generate_launch_description():
             drone_state_manager,
             swarmnxt_controller,
             env_builder_include,
-            # multi_agent_planner_include,
+            multi_agent_planner_include,
         ]
     )
