--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -97,24 +97,42 @@ def generate_launch_description():
         output="log",
     )
 
-    # swarmnxt_controller = Node(
-    #     package="swarmnxt_controller_ros2",
-    #     executable="swarmnxt_controller_node",
-    #     namespace="{{ ns }}",
-    #     parameters=[
-    #         {
-    #             "hdsm_agent_prefix": "/agent_" + str(hdsm_idx),
-    #         }
-    #     ],
-    #     output="log",
-    # )
-
     drone_planner = Node(
         package="drone_planner_ros2",
         executable="drone_planner_node",
         namespace="{{ ns }}",
         output="log",
     )
+
+    pkg_share = get_package_share_directory('mpc_controller_ros2')
+    params_file = os.path.join(pkg_share, 'config', 'mpc_omninxt_params.yaml')
+    mpc_node = Node(
+        package='mpc_controller_ros2',
+        executable='mpc_controller_node',
+        name='mpc_controller',
+        namespace= "{{ ns }}",
+        output='screen',
+        emulate_tty=True,
+        parameters=[params_file],
+        remappings=[
+            ('/fmu/in/vehicle_rates_setpoint', '/mpc/out/vehicle_rates_setpoint'),
+            ('/fmu/in/vehicle_torque_setpoint', '/mpc/out/vehicle_torque_setpoint'),
+            ('/fmu/in/vehicle_thrust_setpoint', '/mpc/out/vehicle_thrust_setpoint'),
+            ('/fmu/in/actuator_motors', '/mpc/out/actuator_motors'),
+        ]
+    )
+
+    bridge_config_file = PathJoinSubstitution([
+        FindPackageShare('omninxt_bridge_ros2'),
+        'config',
+        'command_converter_params.yaml'
+    ])
+    command_converter_node = Node(
+        package='omninxt_bridge_ros2',
+        executable='command_converter_node',
+        name='command_converter',
+        output='screen',
+        parameters=[bridge_config_file])
 
     env_builder_include = IncludeLaunchDescription(
         AnyLaunchDescriptionSource(
@@ -153,7 +171,6 @@ def generate_launch_description():
             latency_checker,
             safety_checker,
             drone_state_manager,
-            # swarmnxt_controller,
             env_builder_include,
             multi_agent_planner_include,
         ]
