--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -104,8 +104,11 @@ def generate_launch_description():
         output="log",
     )
 
-    pkg_share = get_package_share_directory('mpc_controller_ros2')
-    params_file = os.path.join(pkg_share, 'config', 'mpc_omninxt_params.yaml')
+    mpc_params_file = PathJoinSubstitution([
+        FindPackageShare('mpc_controller_ros2'),
+        'config',
+        'mpc_omninxt_params.yaml'
+    ])
     mpc_node = Node(
         package='mpc_controller_ros2',
         executable='mpc_controller_node',
@@ -113,7 +116,7 @@ def generate_launch_description():
         namespace= "{{ ns }}",
         output='screen',
         emulate_tty=True,
-        parameters=[params_file],
+        parameters=[mpc_params_file],
         remappings=[
             ('/fmu/in/vehicle_rates_setpoint', '/mpc/out/vehicle_rates_setpoint'),
             ('/fmu/in/vehicle_torque_setpoint', '/mpc/out/vehicle_torque_setpoint'),
