--- a/ansible/templates/drone_launch.py.j2
+++ b/ansible/templates/drone_launch.py.j2
@@ -175,7 +175,7 @@ def generate_launch_description():
             safety_checker,
             drone_state_manager,
             mpc_node,
-            # command_converter_node,
+            command_converter_node,
             env_builder_include,
             multi_agent_planner_include,
         ]
