--- a/ansible/templates/drone_bridge_config.yaml.j2
+++ b/ansible/templates/drone_bridge_config.yaml.j2
@@ -6,6 +6,9 @@ topics:
   /fmu/out/vehicle_status_v1: 
     type: px4_msgs/msg/VehicleStatus
     remap: {{ns}}/fmu/out/vehicle_status_v1
+  /fmu/out/battery_status: 
+    type: px4_msgs/msg/BatteryStatus
+    remap: {{ns}}/fmu/out/battery_status
   /fmu/out/vehicle_local_position: 
     type: px4_msgs/msg/VehicleLocalPosition
     remap: {{ns}}/fmu/out/vehicle_local_position
