--- a/ansible/templates/drone_bridge_config.yaml.j2
+++ b/ansible/templates/drone_bridge_config.yaml.j2
@@ -16,6 +16,9 @@ topics:
     type: swarmnxt_msgs/msg/DroneState
   {{ns}}/latency_checker/heartbeat:
     type: latency_checker_ros2/msg/Heartbeat
+  {{ns}}/mpc_controller/mpc_trajectory:
+    type: nav_msgs/msg/Path
+    type: latency_checker_ros2/msg/Heartbeat
   agent_{{ current_drone_idx }}/traj_full: 
     type: multi_agent_planner_msgs/msg/Trajectory
   agent_{{ current_drone_idx }}/traj:
